upgrade our own build to indra 2